# RP2350-Storage-Bridge

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml  firmware.yml  pages.yml
firmware/: CMakeLists.txt
firmware/src/: base64.c  base64.h  board.h  board_waveshare_rp2350a.h  fatfs_ff.c  fatfs_ffunicode.c  ffconf.h  file_ops.c  file_ops.h  main.c  mpu_setup.c  mpu_setup.h  msc_diskio.c  msc_host.c  msc_host.h  serial_cmd.c  serial_cmd.h  sha256.c  sha256.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
tools/: bundle.py
web/: index.html  manifest.json  sw.js
web/css/: components.css  file-browser.css  layout.css  sidebar.css  tokens.css  upload.css
web/js/: app.js  router.js  serial.js  state.js
web/js/components/: dialog.js  file-browser.js  file-viewer.js  sidebar.js  toast.js  toolbar.js  transfer-progress.js  upload.js
web/js/utils/: base64.js  constants.js  dom.js  format.js  security.js  zip.js
